--- a/ventana.ui
+++ b/ventana.ui
@@ -153,7 +153,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <property name="tabBarAutoHide">
        <bool>false</bool>
@@ -1668,13 +1668,13 @@
       </widget>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Page</string>
+        <string>Proveedores</string>
        </attribute>
        <widget class="QLabel" name="lblProd_2">
         <property name="geometry">
          <rect>
           <x>40</x>
-          <y>50</y>
+          <y>20</y>
           <width>45</width>
           <height>32</height>
          </rect>
@@ -1704,8 +1704,8 @@
        <widget class="QLabel" name="lblNomeProducto_2">
         <property name="geometry">
          <rect>
-          <x>130</x>
-          <y>60</y>
+          <x>120</x>
+          <y>20</y>
           <width>54</width>
           <height>20</height>
          </rect>
@@ -1732,8 +1732,8 @@
        <widget class="QLineEdit" name="editNomeProducto_2">
         <property name="geometry">
          <rect>
-          <x>190</x>
-          <y>60</y>
+          <x>200</x>
+          <y>20</y>
           <width>161</width>
           <height>22</height>
          </rect>
@@ -1751,8 +1751,8 @@
        <widget class="QLabel" name="lblPrecio_2">
         <property name="geometry">
          <rect>
-          <x>410</x>
-          <y>60</y>
+          <x>400</x>
+          <y>20</y>
           <width>54</width>
           <height>22</height>
          </rect>
@@ -1780,7 +1780,7 @@
         <property name="geometry">
          <rect>
           <x>470</x>
-          <y>60</y>
+          <y>20</y>
           <width>111</width>
           <height>22</height>
          </rect>
@@ -1798,8 +1798,8 @@
        <widget class="QLabel" name="lblStock_2">
         <property name="geometry">
          <rect>
-          <x>630</x>
-          <y>60</y>
+          <x>620</x>
+          <y>20</y>
           <width>54</width>
           <height>22</height>
          </rect>
@@ -1826,8 +1826,8 @@
        <widget class="QLineEdit" name="EditStock_2">
         <property name="geometry">
          <rect>
-          <x>720</x>
-          <y>60</y>
+          <x>710</x>
+          <y>20</y>
           <width>111</width>
           <height>22</height>
          </rect>
